apps/web-backoffice-generic/src/pages/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;
body {
    margin: 0;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
        'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
        'Helvetica Neue', sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    overflow-x: hidden;
}
.custom-shape-divider-top-1677508034 {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    overflow: hidden;
    line-height: 0;
}
/* signin button */
.button-black Button {
    background-color: black;
    color: white;
}
.button-black:hover Button {
    background-color: white;
    color: black;
}
.button-white Button {
    background-color: white;
    color: black;
}
.button-white:hover Button {
    background-color: black;
    color: white;
}
/* links  */
.link {
    transition: all 0.25s ease-out;
}
.link:hover {
    color: red;
}

/* social icons  */
.social-icons {
    transition: all 0.25s ease-out;
}
.social-icons:hover {
    color: red;
}

code {
    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
        monospace;
}

.curve {
    position: absolute;
    height: 200px;
    width: 100%;
    bottom: 0;
    text-align: center;
    z-index: 1;
}

.curve::before {
    content: '';
    display: block;
    position: absolute;
    border-radius: 100% 50%;
    width: 55%;
    height: 100%;
    transform: translate(85%, 60%);
    background-color: #051e34;
}

.curve::after {
    content: '';
    display: block;
    position: absolute;
    border-radius: 100% 50%;
    width: 55%;
    height: 100%;
    background-color: #ffffff;
    transform: translate(-4%, 40%);
    z-index: -1;
}

.blur {
    position: absolute;
    width: 10rem;
    height: 14rem;
    border-radius: 50%;
    filter: blur(90px);
    background: #a6ddf0;
}

.bounce {
    animation: bounce 5s infinite;
}
@keyframes bounce {
    0%,
    100% {
        transform: translateY(2%);
        animation-timing-function: cubic-bezier(0, 0, 2, 0);
    }
    50% {
        transform: translateY(0);
        animation-timing-function: cubic-bezier(0, 0, 0.2, 0);
    }
}

/* CAROUSEL */

.carousel-cell {
    width: 100%;
    height: auto;
    margin-right: 10px;
    /* center images in cells with flexbox */
    display: flex;
    align-items: center;
    justify-content: center;
}

.carousel-cell-image {
    display: block;
    max-height: 100%;
}

/* smaller, dark, rounded square */
.flickity-prev-next-button {
    width: 30px;
    height: 30px;
    border-radius: 5px;
}
.flickity-prev-next-button:hover {
    background: #f90;
}
/* arrow color */
.flickity-prev-next-button .arrow {
    fill: white;
}
.flickity-prev-next-button.no-svg {
    color: white;
}

.tiptap {
    padding: 1rem;
    outline: 0;
}

.tiptap table {
    margin: 0;
    overflow: hidden;
    table-layout: fixed;
    width: 100%;
    border-collapse: collapse;
}

.column-resize-handle {
    pointer-events: none;
    position: absolute;
    right: -2px;
    top: 0;
    width: 4px;
}

.resize-cursor {
    cursor: ew-resize;
    cursor: col-resize;
}

@layer base {
    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
        @apply text-black font-primary;
    }
    .section {
        @apply py-12 lg:py-32;
    }
    .section-title {
        @apply text-3xl lg:text-4xl font-medium lg:font-extrabold mb-5;
    }
    .subtitle {
        @apply text-base text-paragraph mb-16 italic lg:mb-24 max-w-[520px];
    }
    .btn {
        @apply py-4 px-7 font-medium text-white flex items-center justify-center rounded-sm transition-all;
    }
    .btn-lg {
        @apply h-[54px];
    }
    .btn-md {
        @apply h-[48px];
    }
    .input {
        @apply text-paragraph h-[60px] border-2 pl-6 w-full font-body text-[15px] rounded-sm focus:outline focus:outline-1 focus:outline-accent;
    }
    .textarea {
        @apply resize-none w-full border-2 dark:outline-none p-6 rounded-sm h-[200px] focus:outline focus:outline-1 focus:outline-accent;
    }
    .active {
        @apply text-accent;
    }
    .errorTextInput {
        @apply mt-2 text-error;
    }
    .errorTextArea {
        @apply text-error;
    }
}

